src/objects/BLND_DFCS_Carousel__c.object
<CustomObject>
    <description>MG_Carousel</description>
    <fields>
        <fullName>BLND_Bookmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bookmark</label>
        <referenceTo>BLND_DFCS_Slide__c</referenceTo>
        <relationshipLabel>Carousels</relationshipLabel>
        <relationshipName>Carousels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Data__c</fullName>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Expansion__c</fullName>
        <label>Expansion</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Extra_Field__c</fullName>
        <label>Extra Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Flag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Flag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Height__c</fullName>
        <label>Height</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Lastopen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lastopen</label>
        <referenceTo>BLND_DFCS_Slide__c</referenceTo>
        <relationshipLabel>Carousels (Lastopen)</relationshipLabel>
        <relationshipName>Carousels1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLND_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Over1__c</fullName>
        <label>Over1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Over2__c</fullName>
        <label>Over2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Over3__c</fullName>
        <label>Over3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BLND_Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BLND_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presentation</fullName>
                    <default>true</default>
                    <label>Presentation</label>
                </value>
                <value>
                    <fullName>Notebook</fullName>
                </value>
                <value>
                    <fullName>Address Book</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>To Do List</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BLND_Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BLND_Width__c</fullName>
        <label>Width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Carousel</label>
    <nameField>
        <label>Carousel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carousels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>